# voice-pro

./: CLAUDE.md  README.md  configure.bat  one_click.py  pyproject.toml  start-voice.py  start.bat  start.sh  uninstall.bat  uninstall.sh  update.bat  update.sh
app/: abus_app_voice.py  abus_asr_faster_whisper.py  abus_asr_whisper.py  abus_asr_whisper_timestamped.py  abus_demucs.py  abus_translate_deep.py  abus_tts_cosyvoice.py  gradio_aicover.py  gradio_asr.py  gradio_batch_tts.py  gradio_demixing.py  gradio_gulliver.py  gradio_kara.py  gradio_live_translate.py  gradio_rvc.py  gradio_translate.py  gradio_tts_cosyvoice.py  gradio_tts_edge.py  gradio_tts_f5.py  gradio_tts_kokoro.py  gradio_tts_rvc.py  gradio_vsr.py  tab_gulliver.py  tab_live_translate.py  tab_subtitle.py  tab_translate.py  tab_tts_cosyvoice.py  tab_tts_edge.py  tab_tts_f5_multi.py  tab_tts_f5_single.py  tab_tts_kokoro.py  tab_tts_rvc.py
docs/blog/: 2026-07-13.v4.0.0-release.naver.kor.md  README.md
src/: config.py  ui.py
src/css/: main.css
src/i18n/locale/: de_DE.json  en_US.json  es_ES.json  ja_JP.json  ko_KR.json  pt_BR.json  zh_CN.json  zh_TW.json
