[project]
name = "voice-pro"
version = "4.0.0"
description = "Voice-Pro: AI-powered dubbing studio (ASR / translation / TTS / voice cloning)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }

dependencies = [
    # core
    "structlog",
    "py-cpuinfo",
    "wget",
    "json5",
    "more_itertools",
    "pyyaml",
    "tqdm",
    "markdown",
    "rich",
    "ntplib",
    "python-dotenv",
    "browser_cookie3",
    # ASR (Whisper family) — whisperX was dropped in v4.0: its huggingface-hub<1.0 pin
    # blocked the gradio 6 migration
    "openai-whisper==20250625",
    "faster-whisper==1.2.1",
    "whisper-timestamped==1.15.9",
    # media
    "ffmpeg-python==0.2.0",
    "yt-dlp>=2025.9.26",
    "demucs==4.0.1",
    "pydub==0.25.1",
    "pyworld>=0.3.5",
    "soundfile",
    "soundcard",
    "librosa>=0.10.2",
    "matplotlib",
    # UI
    "gradio==6.20.0",
    "numpy>=2.1,<2.5",  # numba (openai-whisper/librosa) caps numpy at <2.5
    "numba>=0.60",  # floor prevents the resolver from falling back to ancient sdist-only releases
    "huggingface-hub>=1.2,<2",  # required by gradio 6
    "cached_path",
    # translation / subtitles
    "edge-tts>=7.2.8",
    "python-iso639",
    "deep-translator",
    "pysubs2",
    "lingua-language-detector",
    "azure-ai-translation-text==1.0.0b1",
    "azure-cognitiveservices-speech",
    # live translation
    "websockets",
    "websocket-client",
    "kaldialign",
    "jiwer",
    "evaluate",
    # F5-TTS
    "f5-tts==1.1.21",
    # 0.7.0 is the first torchcodec with Windows wheels; 0.8+ targets newer torch than 2.8
    "torchcodec>=0.7,<0.8",
    # CosyVoice (vendored cosyvoice/ + third_party/Matcha-TTS)
    "conformer==0.3.2",
    "gdown",  # imported by cosyvoice.flow.flow_matching
    "diffusers==0.29.0",  # Matcha imports diffusers.models.lora.LoRACompatibleLinear (removed in newer diffusers)
    "HyperPyYAML>=1.2.2",
    "inflect>=7.3.1",
    "lightning>=2.2,<3",
    "modelscope>=1.20",
    # transformers 5.x needs two behavior patches in the vendored cosyvoice/llm/llm.py
    # (Qwen dtype=float32 + full-length decode attention mask) — see Qwen2Encoder.
    # Without them, CosyVoice2/3 silently synthesize wrong content.
    "transformers==5.13.0",
    "wetext>=0.1.4",  # pure-Python replacement for WeTextProcessing (pynini has no Windows wheels)
    "x-transformers",
    "onnxruntime==1.26.0",  # last CUDA 12 line; also pulled by faster-whisper
    # kokoro (<3.13 is why requires-python is capped)
    "kokoro==0.9.4",
    "misaki[en,ja,zh]==0.9.4",
    # drop-in replacement for pyopenjtalk (misaki[ja]) with prebuilt wheels — see override-dependencies
    "pyopenjtalk-plus",
    # NLP
    "spacy>=3.8,<3.9",
    # en_core_web_sm is needed at import time by misaki/kokoro G2P; other languages
    # are downloaded at runtime by spacy.cli.download, which needs pip in the env
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "pip",
    # faster HF downloads from xet-enabled repos
    "hf_xet",
]

[project.optional-dependencies]
gpu = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
    "onnxruntime-gpu==1.26.0",
]
cpu = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
]

[tool.uv]
conflicts = [[{ extra = "gpu" }, { extra = "cpu" }]]
# this is an application environment, not an installable library
package = false
override-dependencies = [
    # pyopenjtalk (via misaki[ja]) is sdist-only and needs MSVC+CMake to build;
    # we ship pyopenjtalk-plus instead, which provides the same `pyopenjtalk` module
    "pyopenjtalk; sys_platform == 'never'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
